updated People landing page - background of squares and 4 per row

--- a/people.html
+++ b/people.html
@@ -180,7 +180,7 @@
             <div class="col-md-3">
               <div class="team-member">
                 <figure>
-                  <img src="assets/images/professionals/albert2.png" alt="" class="img-responsive">
+                  <img src="assets/images/professionals/albert.png" alt="" class="img-responsive">
                   <figcaption>
                     <p>M&A and Shareholder Derivative litigation</p>
                     <ul>
@@ -342,6 +342,251 @@
             <div class="col-md-3">
               <div class="team-member">
                 <figure>
+                  <img src="assets/images/professionals/dancona.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>Securities Fraud Litigation</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">JOSHUA E. D'ANCONA</div>
+                <p>PARTNER</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+  
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/degnan.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>New matter development - securities class action lawsuits</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">RYAN T. DEGNAN</div>
+                <p>PARTNER</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+  
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/gerard.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>Securities, Consumer Class Actions, and <i>Qui Tam</i></p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">ERIC K. GERARD</div>
+                <p>PARTNER</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/greenstein.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>Securities Fraud Litigation</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">ELI R. GREENSTEIN</div>
+                <p>PARTNER</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+          </div><!-- /.row -->
+
+
+
+          <div class="row">
+  
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/handler.jpg" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>Securities Fraud Litigation</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">SEAN M. HANDLER</div>
+                <p>PARTNER</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+  
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/jarvis.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>New matter development - securities class action lawsuits</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">GEOFFREY C. JARVIS</div>
+                <p>PARTNER</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+  
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/joost.jpg" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>Securities, Consumer Class Actions, and <i>Qui Tam</i></p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">JENNIFER L. JOOST</div>
+                <p>PARTNER</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/kaplan.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>Securities Fraud Litigation</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">STACEY M. KAPLAN</div>
+                <p>PARTNER</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+          </div><!-- /.row -->
+
+
+
+
+          <div class="row">
+  
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/kessler.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>Securities Fraud Litigation</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">DAVID KESSLER</div>
+                <p>PARTNER</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+  
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/maro.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>New matter development - securities class action lawsuits</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">JAMES A. MARO, JR.</div>
+                <p>PARTNER</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+  
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/materese.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>Securities, Consumer Class Actions, and <i>Qui Tam</i></p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">JOSHUA A. MATERESE</div>
+                <p>PARTNER</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/mazzeo.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>Securities Fraud Litigation</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">MARGARET E. MAZZEO</div>
+                <p>PARTNER</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+          </div><!-- /.row -->
+
+
+
+<!-- // ASSOCIATES -->
+          <div class="row">
+  
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
                   <img src="assets/images/professionals/alavi2.png" alt="" class="img-responsive">
                   <figcaption>
                     <p>M&A and Shareholder Derivative litigation</p>
@@ -415,6 +660,171 @@
               </div><!-- /.team-member-->
             </div><!-- /.col-md-4 -->
           </div><!-- /.row -->
+
+
+
+          <div class="row">
+  
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/goodhart.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>M&A and Shareholder Derivative litigation</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">GRANT D. GOODHART III</div>
+                <p>ASSOCIATE</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+  
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/graden.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>New matter development - securities class action lawsuits</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">TYLER S. GRADEN</div>
+                <p>ASSOCIATE</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+  
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/greenspan.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>ERISA, Consumer and Antitrust Litigation</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">STACEY A. GREENSPAN</div>
+                <p>ASSOCIATE</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+
+            <div class="col-md-3">
+              <div class="team-member">
+                <figure>
+                  <img src="assets/images/professionals/hasiuk.png" alt="" class="img-responsive">
+                  <figcaption>
+                    <p>Head of Global Litigation</p>
+                    <ul>
+                      <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                      <li><a href=""><i class="fas fa-phone"></i></a></li>
+                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div id="people-name">NATHAN A. HASIUK</div>
+                <p>ASSOCIATE</p>
+              </div><!-- /.team-member-->
+            </div><!-- /.col-md-4 -->
+          </div><!-- /.row -->
+
+
+  
+  <!-- // STAFF Attorneys -->
+
+  <div class="row">
+  
+    <div class="col-md-3">
+      <div class="team-member">
+        <figure>
+          <img src="assets/images/professionals/alsaleh.png" alt="" class="img-responsive">
+          <figcaption>
+            <p>M&A and Shareholder Derivative litigation</p>
+            <ul>
+              <li><a href=""><i class="fas fa-envelope"></i></a></li>
+              <li><a href=""><i class="fas fa-phone"></i></a></li>
+              <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+              <div id="people-read">READ MORE</div>
+            </ul>
+          </figcaption>
+        </figure>
+        <div id="people-name">SARA ALSALEH</div>
+        <p>STAFF ATTORNEY</p>
+      </div><!-- /.team-member-->
+    </div><!-- /.col-md-4 -->
+
+    <div class="col-md-3">
+      <div class="team-member">
+        <figure>
+          <img src="assets/images/professionals/barksdale.png" alt="" class="img-responsive">
+          <figcaption>
+            <p>New matter development - securities class action lawsuits</p>
+            <ul>
+              <li><a href=""><i class="fas fa-envelope"></i></a></li>
+              <li><a href=""><i class="fas fa-phone"></i></a></li>
+              <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+              <div id="people-read">READ MORE</div>
+            </ul>
+          </figcaption>
+        </figure>
+        <div id="people-name">LAMARLON R. BARKSDALE</div>
+        <p>STAFF ATTORNEY</p>
+      </div><!-- /.team-member-->
+    </div><!-- /.col-md-4 -->
+
+    <div class="col-md-3">
+      <div class="team-member">
+        <figure>
+          <img src="assets/images/professionals/calhoun.png" alt="" class="img-responsive">
+          <figcaption>
+            <p>ERISA, Consumer and Antitrust Litigation</p>
+            <ul>
+              <li><a href=""><i class="fas fa-envelope"></i></a></li>
+              <li><a href=""><i class="fas fa-phone"></i></a></li>
+              <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+              <div id="people-read">READ MORE</div>
+            </ul>
+          </figcaption>
+        </figure>
+        <div id="people-name">ELIZABETH W. CALHOUN</div>
+        <p>STAFF ATTORNEY</p>
+      </div><!-- /.team-member-->
+    </div><!-- /.col-md-4 -->
+
+    <div class="col-md-3">
+      <div class="team-member">
+        <figure>
+          <img src="assets/images/professionals/dragovich.png" alt="" class="img-responsive">
+          <figcaption>
+            <p>Head of Global Litigation</p>
+            <ul>
+              <li><a href=""><i class="fas fa-envelope"></i></a></li>
+              <li><a href=""><i class="fas fa-phone"></i></a></li>
+              <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+              <div id="people-read">READ MORE</div>
+            </ul>
+          </figcaption>
+        </figure>
+        <div id="people-name">ELIZABETH K. DRAGOVICH</div>
+        <p>STAFF ATTORNEY</p>
+      </div><!-- /.team-member-->
+    </div><!-- /.col-md-4 -->
+  </div><!-- /.row -->
+
           
 
           
