--- a/newcases.html
+++ b/newcases.html
@@ -143,36 +143,36 @@
             <tbody>
               <tr>
                 <td id="GoodRX">GoodRx Holdings, Inc.</td>
-                <td>??</td>
-                <td>??</td>
+                <td>NASDAQ</td>
+                <td>GDRX</td>
                 <td>24</td>
                 <td id="GoodRX1" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
               <tr>
                 <td>Penumbra, Inc. (2021)</td>
-                <td>??</td>
-                <td>??</td>
+                <td>NYSE</td>
+                <td>PEN</td>
                 <td>52</td>
                 <td id="GoodRX1" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
               <tr>
                 <td>QuantumScape Corporation f/k/a Kensington<br> Capital Acquisition Corp.</td>
-                <td>??</td>
-                <td>??</td>
+                <td>NYSE</td>
+                <td>QS</td>
                 <td>44</td>
                 <td id="GoodRX1" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
               <tr>
                 <td>Restaurant Brands International Inc.</td>
-                <td>??</td>
-                <td>??</td>
+                <td>NYSE</td>
+                <td>QSR</td>
                 <td>27</td>
                 <td id="GoodRX1" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
               <tr>
                 <td>Splunk Inc.</td>
-                <td>??</td>
-                <td>??</td>
+                <td>NASDAQ</td>
+                <td>SPLK</td>
                 <td>10</td>
                 <td id="GoodRX1" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
