updated current cases to show exchange and ticker symbols

--- a/currentcases.html
+++ b/currentcases.html
@@ -142,107 +142,142 @@
           <table cellpadding="0" cellspacing="0">
             <tbody>
               <tr>
-                <td id="GoodRX">GoodRx Holdings, Inc.</td>
-                <td>??</td>
-                <td>??</td>
+                <td id="GoodRX">Acuity Brands, Inc.</td>
+                <td>NYSE</td>
+                <td>AYI</td>
+                <td>Complete</td>
+                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+              </tr>
+              <tr>
+                <td>Advance Auto Parts, Inc.</td>
+                <td>NYSE</td>
+                <td>AAP</td>
+                <td>Complete</td>
+                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+              </tr>
+              <tr>
+                <td>Align Technology, Inc.</td>
+                <td>NASDAQ</td>
+                <td>ALGN</td>
+                <td>Complete</td>
+                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+              </tr>
+              <tr>
+                <td>Allergan plc</td>
+                <td>NYSE</td>
+                <td>AGN</td>
+                <td>Complete</td>
+                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+              </tr>
+              <tr>
+                <td>Becton, Dickinson and Company</td>
+                <td>NYSE</td>
+                <td>BDX</td>
+                <td>Complete</td>
+                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+              </tr>
+              <tr>
+                <td id="GoodRX">The Boeing Company</td>
+                <td>NYSE</td>
+                <td>BA</td>
+                <td>Complete</td>
+                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+              </tr>
+              <tr>
+                <td>Carnival Corp.</td>
+                <td>NYSE</td>
+                <td>CCL</td>
+                <td>Complete</td>
+                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+              </tr>
+              <tr>
+                <td>Campbell Soup Company</td>
+                <td>NYSE</td>
+                <td>CPB</td>
+                <td>Complete</td>
+                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+              </tr>
+              <tr>
+                <td>Celgene Corporation</td>
+                <td>NGS</td>
+                <td>CLG</td>
                 <td>Pending</td>
                 <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
               <tr>
-                <td>Penumbra, Inc. (2021)</td>
-                <td>??</td>
-                <td>??</td>
+                <td>Farfetch Limited</td>
+                <td>NYSE</td>
+                <td>FTCH</td>
                 <td>Pending</td>
                 <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
               <tr>
-                <td>QuantumScape Corporation f/k/a Kensington<br> Capital Acquisition Corp.</td>
-                <td>??</td>
-                <td>??</td>
+                <td id="GoodRX">The Goldman Sachs Group</td>
+                <td>NYSE</td>
+                <td>GS</td>
+                <td>Pending</td>
+                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+              </tr>
+              <tr>
+                <td>HP, Inc.</td>
+                <td>NYSE</td>
+                <td>HPQ</td>
+                <td>Pending</td>
+                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+              </tr>
+              <tr>
+                <td>The Kraft Heinz Company</td>
+                <td>NASDAQ</td>
+                <td>KHC</td>
                 <td>Active</td>
                 <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
               <tr>
-                <td>Restaurant Brands International Inc.</td>
-                <td>??</td>
-                <td>??</td>
+                <td>Mylan N.V.</td>
+                <td>NASDAQ</td>
+                <td>VTRS</td>
                 <td>Pending</td>
                 <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
               <tr>
-                <td>Splunk Inc.</td>
-                <td>??</td>
-                <td>??</td>
+                <td>OSI Systems, Inc.</td>
+                <td>NASDAQ</td>
+                <td>OSIS</td>
                 <td>Pending</td>
                 <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
               <tr>
-                <td id="GoodRX">GoodRx Holdings, Inc.</td>
-                <td>??</td>
-                <td>??</td>
+                <td>Precision Castparts</td>
+                <td>NYSE</td>
+                <td>PCP</td>
                 <td>Pending</td>
                 <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
               <tr>
-                <td>Penumbra, Inc. (2021)</td>
-                <td>??</td>
-                <td>??</td>
+                <td>Perrigo Company plc</td>
+                <td>NYSE</td>
+                <td>PRGO</td>
                 <td>Pending</td>
                 <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
               <tr>
-                <td>QuantumScape Corporation f/k/a Kensington<br> Capital Acquisition Corp.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Active</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Restaurant Brands International Inc.</td>
-                <td>??</td>
-                <td>??</td>
+                <td>Qualcomm Incorporated.</td>
+                <td>NASDAQ</td>
+                <td>QCOM</td>
                 <td>Pending</td>
                 <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
               <tr>
-                <td>Splunk Inc.</td>
-                <td>??</td>
-                <td>??</td>
+                <td>Teva Pharmaceutical Industries Ltd.</td>
+                <td>NYSE</td>
+                <td>TEVA</td>
                 <td>Pending</td>
                 <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
               <tr>
-                <td id="GoodRX">GoodRx Holdings, Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Penumbra, Inc. (2021)</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>QuantumScape Corporation f/k/a Kensington<br> Capital Acquisition Corp.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Active</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Restaurant Brands International Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Splunk Inc.</td>
-                <td>??</td>
-                <td>??</td>
+                <td>Walgreen Co.</td>
+                <td>NASDAQ</td>
+                <td>WBA</td>
                 <td>Pending</td>
                 <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
               </tr>
