updated sign up page

--- a/casesignup.html
+++ b/casesignup.html
@@ -134,15 +134,59 @@
     SIGN UP 
 </div><br><br><br><br><br>
 
-<div class="newcases-description">
-    Notice is hereby given that a class action lawsuit has been filed on behalf of those who purchased or otherwise acquired GoodRx Holdings, Inc. (“GoodRx”) (NASDAQ: GDRX) Class A common stock between September 23, 2020 and November 16, 2020, inclusive (the “Class Period”).<br><br>
+<div class="case-caption">
+ <b><span style="color: rgb(5, 106, 207)">CASE CAPTION:</span></b> &nbsp; <i>In re Acuity Brands, Inc. Securities Litigation</i><br>
+  <b><span style="color: rgb(5, 106, 207)">COURT:</span></b> &nbsp; United States District Court for the Northern District of Georgia</i><br>
+  <b><span style="color: rgb(5, 106, 207)">CASE NUMBER:</span></b> &nbsp; 1:18-cv-02140-MHC</i><br>
+  <b><span style="color: rgb(5, 106, 207)">JUDGE:</span></b> &nbsp; Honorable Mark H. Cohen</i><br>
+  <b><span style="color: rgb(5, 106, 207)">PLAINTIFF:</span></b> &nbsp; Public Employees’ Retirement System of Mississippi</i><br>
+  <b><span style="color: rgb(5, 106, 207)">DEFENDANTS:</span></b> &nbsp; Acuity Brands, Inc. (“Acuity” or the “Company”), Vernon J. Nagel, Richard
+  K. Reece, and Mark A. Black</i><br>
+  <b><span style="color: rgb(5, 106, 207)">CLASS PERIOD:</span></b> &nbsp; October 7, 2017 to April 3, 2017, inclusive</i><br>
+  <b><span style="color: rgb(5, 106, 207)">CASE CONTACTS:</span></b> &nbsp; Andrew L. Zivitz, Gregory M. Castaldo, Joshua E. D’Ancona, Johnston
+  de F. Whitman, Jr., Evan R. Hoey, and Vanessa Milan<br><br>
+</div>
 
-    According to the complaint, GoodRx is a holding company that owns and operates a U.S. consumer-focused digital healthcare platform.  GoodRx represents that it provides consumers with free information and tools that allow them to compare prices and save on their prescription drug purchases. GoodRx provides its users with these services via apps and websites that display prices and discounts at local and mail-order pharmacies for both insured and uninsured Americans.  GoodRx primarily earns its revenue from prescription transaction fees paid by Pharmacy Benefit Managers that manage formularies and prescription transactions. GoodRx also generates revenue from subscription, advertising and telehealth services.<br><br>
 
+<div class="case-blurb"><br>
+This securities fraud class action arises from Acuity’s false and misleading statements regarding
+its ability to sustain the growth rate it experienced from 2010 to 2015.<br><br>
+
+From 2010 to 2015, Acuity experienced a rapid growth rate fueled by the recovery in non-
+residential construction following the 2008 financial crisis and a wide transition to LED lighting.
+Acuity’s relationship with The Home Depot created a strong foundation for its extraordinary
+sales growth, as the Company experienced nine consecutive quarters of record growth. However,
+by the middle of 2015, competitive pressures in the lighting industry, including increased
+competition from overseas suppliers, lower LED prices, and a failure to break into the smart
+lighting solutions market, as well as a dramatic decline in sales to The Home Depot, slowed the
+Company’s growth considerably. Acuity’s investors were kept in the dark about all of these
+fundamental developments while the Defendants materially misrepresented Acuity’s ability to
+maintain the growth rate that it experienced in the previous five years.<br><br>
+
+Acuity’s declining growth rate was revealed to the public gradually when the Company reported
+three consecutive quarters of below-expectation results. Acuity’s stock prices deteriorated,
+causing massive losses to shareholders.<br><br>
+
+Plaintiff filed a Consolidated Amended Class Action Complaint on behalf of a putative class of
+investors, alleging that Acuity, Vernon Nagel, and Richard Reece violated Section 10(b) of the
+Exchange Act by making materially false and misleading statements regarding the growth rate of
+Acuity; and that Nagel, Reece, and Mark Black as controlling persons of Acuity violated Section
+20(a) of the Exchange Act. On August 12, 2019, the United States District Court for the
+Northern District of Georgia granted in part and denied in part Defendants’ motion to dismiss.<br><br>
+
+On August 25, 2020, Plaintiff’s motion for class certification was granted, certifying the
+following class: “All persons who invested in the publicly traded common stock of Acuity
+Brands, Inc. between October 7, 2015, through April 3, 2017 (the ‘Class Period’) and were
+damaged thereby.” The Court appointed Plaintiff, the Public Employees’ Retirement System of
+
+Mississippi, as Class Representative; and Kessler Topaz Meltzer &amp; Check and Labaton
+Sucharow as Class Counsel. Defendants have taken an immediate appeal of the class
+certification order, which is currently pending before the United States Court of Appeals for the
+Eleventh Circuit.
 </div>
 
 </div>
-
+<br><br><br>
     <!-- /////////////////////////////////////////// -->
 <!-- BEGINNING OF SOCIAL MEDIA BUTTONS -->
 <div id="social">
