submit your info page

--- a/casesignup.html
+++ b/casesignup.html
@@ -130,8 +130,8 @@
     VIEW COMPLAINT 
 </div>
 
-<div class="currentcases-submit-info">
-    SIGN UP 
+<div class="newcases-submit-info">
+  SUBMIT YOUR INFORMATION 
 </div><br><br><br><br><br>
 
 <div class="case-caption">
