updated practice area content

--- a/USsecurities.html
+++ b/USsecurities.html
@@ -138,8 +138,23 @@
           <div class="practice-area">PRACTICE AREA</div>
           <div class="associated-cases">ASSOCIATED CASES</div>
 					<h2>U.S. SECURITIES</h2>
-					<p>Kessler Topaz’s renowned shareholder litigation practice has recovered billions of dollars for defrauded investors around the world.  We are aggressive, effective advocates in securities fraud claims against public companies—and their officers, directors, and advisors—that misrepresent information and cause harm to their shareholders.</p>
-					<p>Our sophisticated client base is composed of over 350 institutional investors —including 175+ public pension funds—as well as Taft-Hartley funds, mutual fund managers, investment advisors, insurance companies, sovereign wealth funds, hedge funds and other large investors in the United States and around the world.<br><br></p>
+					<p>Kessler Topaz’s renowned shareholder
+            litigation practice has recovered billions
+            of dollars for defrauded investors around
+            the world. We are aggressive, effective
+            advocates in securities fraud claims
+            against public companies—and their
+            officers, directors and advisors—that
+            misrepresent information and cause
+            harm to their shareholders.</p>
+					<p>Our sophisticated client base is composed of
+            more than 350 institutional investors—
+            including 175+ public pension funds—as
+            well as Taft-Hartley funds, mutual fund
+            managers, asset managers, insurance
+            companies, sovereign wealth funds, hedge
+            funds and other institutional investors in
+            the United States and around the world.<br><br></p>
         </div>
 			</div>
 
