--- a/corporategov.html
+++ b/corporategov.html
@@ -136,9 +136,22 @@
 				<div class="overlapping-feature--center">
           <div class="practice-area">PRACTICE AREA</div>
           <div class="associated-cases">ASSOCIATED CASES</div>
-					<h2>CORPORATE GOVERNANCE</h2>
-					<p>Corporate governance doesn’t just happen in boardrooms. It affects every aspect of a business, every day. When you want to make a tangible impact on how a company is run, corporate governance is the place to start.</p>
-					<p>Kessler Topaz gives shareholders a voice in corporate governance. As one of the leading U.S. firms representing shareholders in securities class actions and shareholder derivative actions, we have deep experience using the courts to achieve governance reform. We also employ direct action such as bylaw amendments, director nominations, and other means to influence board composition and functioning. We work closely with corporate governance experts, organized labor, and other shareholder advocates to promote public policies that compel or encourage corporations to adopt shareholder-friendly corporate governance measures.<br><br></p>
+					<h2>CORPORATE GOVERNANCE + <br>M&A LITIGATION</h2>
+					<p>When corporate fiduciaries abuse their
+            power, class and derivative actions can
+            balance the scales. For example,
+            mergers and acquisitions can offer
+            great opportunities for shareholders to
+            increase value. But they also present
+            temptation for self-dealing and
+            dishonesty by directors and officers,
+            often at shareholder expense. We give
+            shareholders the next best thing to a
+            seat at the negotiating table—strong,
+            effective representation in cases
+            alleging unfairness in a transaction’s
+            price or process.<br></p>
+            <p>
         </div>
 			</div>
 
