--- a/globalsecurities.html
+++ b/globalsecurities.html
@@ -137,8 +137,30 @@
           <div class="practice-area">PRACTICE AREA</div>
           <div class="associated-cases">ASSOCIATED CASES</div>
 					<h2>GLOBAL SECURITIES</h2>
-					<p>Investment strategies today transcend national borders. Unfortunately, so does fraud. Our Global Securities Litigation group is dedicated to helping investors prosecute corporate fraud claims and recover assets around the world. </p>
-					<p>Notably, the Firm has been at the forefront of representing institutional investors in non-U.S. jurisdictions in light of the Supreme Court’s 2010 decision in <i>Morrison v. National Australia Bank</i>.  The Firm has previously, or is currently representing institutional investors in actions in Canada, Brazil, Australia, the Netherlands, the United Kingdom, France, Germany, Portugal, and Japan.<br><br></p>
+					<p>Investment strategies transcend
+            national borders. Unfortunately, so
+            does fraud. Our Global Securities
+            Litigation group is dedicated to helping
+            investors prosecute corporate fraud
+            claims and recover assets around the
+            world. </p>
+          <p>Through our border-crossing work, we
+            have developed a deep understanding of
+            foreign laws and procedures, as well as
+            important relationships with lawyers and
+            experts in more than a dozen countries.
+            Our international experience gives clients
+            a unique advantage in pursuing claims on
+            a global basis.<br><br>
+            Today, global shareholder litigation
+            continues to evolve, as new jurisdictions
+            begin to allow multiparty or group
+            shareholder actions and debate class
+            action procedures. We are committed to
+            remaining at the forefront of these
+            developments and expanding our
+            resources to best serve shareholders
+            around the world. </p>
         </div>
 			</div>
 
