--- a/awardsachievements.html
+++ b/awardsachievements.html
@@ -74,7 +74,7 @@
                     <li><a href="#">Shareholder Derivative</a></li> -->
                     <li><a href="#">Consumer Fraud & Antitrust</a></li>
                     <li><a href="#" id="dropdown-corporategov">Corporate Governance + M&A Litigation</a></li>
-                    <li><a href="#">Whistleblower Representation</a></li>
+                    <li><a href="#" id="dropdown-whistleblower">Whistleblower Representation</a></li>
                   </ul>
               </li>
   
