--- a/whistleblower.html
+++ b/whistleblower.html
@@ -12,7 +12,7 @@
     <!-- <link rel="stylesheet" href="assets/css/news-LP.css"> -->
     <link rel="stylesheet" href="assets/css/socialmediabuttons.css">
     <link rel="stylesheet" href="assets/css/navbar-logo-white.css">
-    <link rel="stylesheet" href="assets/css/settledcases.css">
+    <link rel="stylesheet" href="assets/css/whistleblower.css">
      <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>
@@ -33,7 +33,7 @@
 
 <body>
 
-    <!-- /////////////////////////////////////////// -->
+<!-- /////////////////////////////////////////// -->
 <!-- // BEGINNING OF NAV BAR & HEADER (WHITE BACKGROUND)-->
 <div class="header-wrapper">
     <header>
@@ -59,7 +59,6 @@
                     <li><a href="#" id="dropdown-FAQs">FAQs</a></li>
                   </ul>
                 </li>
-                
 
               <li><a href="#" id="dropdown-people">PEOPLE</a>
               </li>
@@ -76,14 +75,14 @@
                   </ul>
               </li>
   
-            <li><a href="#">CASES</a>
-              <ul class="dropdown">
-                <li><a href="#" id="dropdown-newcases">New Cases</a></li>
-                <li><a href="#" id="dropdown-currentcases">Current Cases</a></li>
-                <li><a href="#" id="dropdown-settledcases">Settled Cases</a></li>
-                <li><a href="#" id="dropdown-landmark">Landmark Results</a></li>
-                </ul>
-            </li>
+              <li><a href="#">CASES</a>
+                <ul class="dropdown">
+                  <li><a href="#" id="dropdown-newcases">New Cases</a></li>
+                  <li><a href="#" id="dropdown-currentcases">Current Cases</a></li>
+                  <li><a href="#" id="dropdown-settledcases">Settled Cases</a></li>
+                  <li><a href="#" id="dropdown-landmark">Landmark Results</a></li>
+                  </ul>
+              </li>
 
             <li><a href="#" id="nav-news">NEWS</a>
               <ul class="dropdown">
@@ -118,115 +117,48 @@
 <!-- // END OF NAV BAR & HEADER (WHITE BACKGROUND)-->
 <!-- /////////////////////////////////////////// -->
 
-<br>
-<div class="bg-image settled"></div>
+<br><br><br>
+<!-- <div class="bg-image whiteglobe-sub"></div> -->
 
+<!-- /////////////////////////////////////////// -->
+<!-- BEGINNING OF US SECURITIES SECTION -->
 
+ <div id="project">
+	<!-- actual content -->
+	
+	<div class="overlapping-feature__container">
+		<div class="overlapping-feature">
 
-    <section data-aos="fade-right">
-        <!--for demo wrap-->
-        <div class="settled-cases-header">SETTLED CASES</div><br>
-        <div class="tbl-header">
-          <table cellpadding="0" cellspacing="0">
-            <thead>
-              <tr>
-                <th>Case Name</th>
-                <th>Class Period</th>
-                <th>Settlement</th>
-                <th>Notice + Proof of Claim</th>
-                <th>Submit By</th>
-              </tr>
-            </thead>
-          </table>
+			<div class="overlapping-feature__image overlapping-feature--left" data-aos="fade-right">
+				<!-- set the image in the page CSS -->
+			</div>
+
+			<div class="overlapping-feature__content overlapping-feature--right overlapping-feature--center"data-aos="fade-left">
+				<div class="overlapping-feature--center">
+          <div class="practice-area">PRACTICE AREA</div>
+          <div class="associated-cases">ASSOCIATED CASES</div>
+					<h2>WHISTLEBLOWER REPRESENTATION</h2>
+					<p>It takes conscience, courage and conviction to bring wrongdoing to light. Kessler Topaz’s whistleblower attorneys know how to use the whistleblower laws to protect and reward those who uncover wrongdoing and step forward to fight it. 
+                    </p>
+                    <p><span style="letter-spacing: 1.5px">CHAMPIONS FOR WHISTLEBLOWERS</span></p>
+					<p>Whistleblowers are the unsung heroes of the marketplace, often risking career and 
+                        reputational harm to report illegal conduct and to do the right thing in the face of 
+                        corporate fraud. At Kessler Topaz, you’ll find lawyers who have dedicated their careers to representing whistleblowers and combatting fraud. 
+                        <br><br></p>
         </div>
-        <div class="tbl-content">
-          <table cellpadding="0" cellspacing="0">
-            <tbody>
-              <tr>
-                <td>Adeptus Health Inc.</td>
-                <td>June 25, 2014 - March 1, 2017</td>
-                <td>$44,000,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
-                <td>June 8, 2020</td>
-              </tr>
-              <tr>
-                <td>Banco Bradesco S.A.</td>
-                <td>August 8, 2014 - July 27, 2016</td>
-                <td>$14,500,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
-                <td>December 21, 2019</td>
-              </tr>
-              <tr>
-                <td>Citibank ADR<br> Capital Acquisition Corp.</td>
-                <td>January 1, 2006 - September 4, 2018</td>
-                <td>$14,750,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
-                <td>August 12, 2019</td>
-              </tr>
-              <tr>
-                <td>Dole Food Company, Inc. (2013)</td>
-                <td>June 11, 2013 - November 1, 2013</td>
-                <td>$113,293,838.30</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>Endo International PLC</td>
-                <td>November 30, 2012 - June 8, 2017</td>
-                <td>$82,500,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
-                <td>February 7, 2020</td>
-              </tr>
-              <tr>
-                <td>Insys Therapeutics, Inc. – Defendant Babich Settlement</td>
-                <td>March 3, 2015 - January 25, 2016</td>
-                <td>$250,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
-                <td>November 7, 2020</td>
-              </tr>
-              <tr>
-                <td>Insys Therapeutics, Inc. - Defendant Baker Settlement</td>
-                <td>March 3, 2015 - January 25, 2016</td>
-                <td>$2,000,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
-                <td>September 12, 2020</td>
-              </tr>
-              <tr>
-                <td>JPMorgan ADR FX</td>
-                <td>November 21, 2010 - July 18, 2018; November 21, 2012 - July 18, 2018</td>
-                <td>$9,500,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
-                <td>September 19, 2019</td>
-              </tr>
-              <tr>
-                <td>SeaWorld Entertainment, Inc.</td>
-                <td>August 29, 2013 - August 12, 2014</td>
-                <td>$65,000,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
-                <td>July 16, 2020</td>
-              </tr>
-              <tr>
-                <td>Snap Inc.</td>
-                <td>March 2, 2017 - August 10, 2017</td>
-                <td>$154,687,500</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
-                <td>January 25, 2021</td>
-              </tr>
-              <tr>
-                <td>The Bank of New York Mellon ADR FX</td>
-                <td>January 1, 1997 - January 17, 2019</td>
-                <td>$72,500,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
-                <td>August 15, 2019</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
-      
+			</div>
 
-      <br><br><br><br>  <br><br><br><br>  <br><br><br><br>  <br><br><br><br>  <br><br><br><br><br>
-    <!-- /////////////////////////////////////////// -->
+		</div>
+	</div>
+	
+	<!-- End of content -->
+</div>
+<!-- END OF US SECURITIES SECTION  -->
+<!-- /////////////////////////////////////////// -->
+
+
+<br><br><br><br>
+<!-- /////////////////////////////////////////// -->
 <!-- BEGINNING OF SOCIAL MEDIA BUTTONS -->
 <div id="social">
     <a class="facebookBtn smGlobalBtn" href="#"></a>
@@ -242,7 +174,6 @@
  <!-- // JS -->
  <script src="assets/javascript/awards.js"></script>
  <script src="assets/javascript/navbar.js"></script>
- <script src="assets/javascript/insights.js"></script>
  <script src="assets/javascript/FAQs.js"></script>
  <script src="assets/javascript/socialmedia.js"></script>
  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
