updated news LP emily

--- a/newsLP.html
+++ b/newsLP.html
@@ -119,6 +119,8 @@
 <!-- // END OF NAV BAR & HEADER (WHITE BACKGROUND)-->
 <!-- /////////////////////////////////////////// -->
 
+<br><div class="bg-image whiteglobe-sub"></div>
+
 <!-- /////////////////////////////////////////// -->
 <!-- BEGINNING OF IN THE COMMUNITY SECTION -->
  
@@ -145,7 +147,7 @@
 The American Bar Foundation is among the world's leading research institutes for the empirical and interdisciplinary study of law. An independent, nonprofit organization for nearly 70 years, the ABF seeks to advance the understanding and improvement of law through research projects of unmatched scale and quality on the most pressing issues facing the legal system in the United States and the world. 
     </div>
 
-</div><br><br><br>
+</div><br><br><br><br><br>
 
 
 
