updated emily LP news page

--- a/newsLP.html
+++ b/newsLP.html
@@ -127,11 +127,11 @@
 <!-- // article news section  -->
 <div class="container">
 
-    <div class="news-LP-ind-title">
-        KTMC Announces Action in Japan Against Nissan Corporation
-    </div><br><br><br>
+    <div class="news-LP-ind-title" data-aos="fade-down">
+      KTMC is Pleased to Announce that Emily N. Christiansen <br>Has Been Named a Fellow of the American Bar Foundation
+    </div><br><br><br><br><br>
 
-    <div class="news-LP-ind-date">
+    <div class="news-LP-ind-date" data-aos="fade-left">
         July 1, 2020 
     </div>
 
