--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
                   <li><a href="#">Subscribe</a></li>
                 </ul>
             </li>
+
+            <li><img src="assets/images/unnamed.png" id="ST-logo-main"></li>
             </ul>
+
+          
 
             </div>
           </nav>
